Issue #24381: Avoid unused function warning when building bundled macOS libffi. Patch by Vajrasky Kok.